nueva logica para balances